# graphene_flask_example

./: .gitignore  README.md  app.py  database.py  hello_world.py  models.py  sample-queries.txt  schema.py  setup.cfg  setup.py  test2.txt
example/: database.py  database_utils.py  models.py  schema.py
raw_data/: hogwarts_staff.json  houses.json  pets.json  students.json
requirements/: main.in  main_3.7.txt  test.in  test_3.7.txt
tests/: conftest.py  test_db.py  test_query.py
