[metadata]
name = graphene_flask_example
version = 0.0.1
author = Ayla Khan
author_email = ayla.khan@gmail.com

[options]
python_requires >= 3.6
install_requires =
    Flask==1.0.2
    graphene==2.1.3
    SQLAlchemy==1.2.18
    Flask-GraphQL
    graphene-sqlalchemy
    graphql-core
    graphql-relay
    graphql-server-core
    gql


[bdist_wheel]
universal = 0
