[metadata]
name = graphene_flask_example
version = 0.0.2
author = Ayla Khan
author_email = ayla.khan@gmail.com

[options]
python_requires >= 3.6
install_requires =
    Flask==1.0.2
    graphene==2.1.8
    gunicorn==19.8.1
    SQLAlchemy==1.2.18
    Flask-GraphQL
    graphene-sqlalchemy
    graphql-core
    graphql-relay
    graphql-server-core
    gql
    pytest-runner

tests_require =
    pytest>=3.0.7
    pytest-html
    pytest-cov
    teamcity-messages

[aliases]
test=pytest

[bdist_wheel]
universal = 0
